# LiveSegmentation

./: .gitignore  CMakeLists.txt  LocalProjectPaths.h.in  build.sh  readme.md  setup.sh
CMake/: FindLiveSegmentation.cmake
caffe/: Dockerfile
caffe/cpu/: Dockerfile
caffe/gpu/: Dockerfile
data/: cafe1a.ppm  cafe1c.ppm
data/images/: cafe1b.ppm
data/models/: deploy.prototxt
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
lib/LiveSegmentation/: CMakeLists.txt  LiveSegmentationConfig.cmake.in  LiveSegmentationConfigVersion.cmake.in
lib/LiveSegmentation/include/LiveSegmentation/BA/: Classifier.hpp  ClassifierQueue.hpp  Future.hpp  Probabilities.cuh  Probabilities.hpp
lib/LiveSegmentation/include/LiveSegmentation/BA/impl/: FutureDetail.hpp
lib/LiveSegmentation/src/: nyu_classification.cpp
lib/LiveSegmentation/src/BA/: Classifier.cpp  ClassifierQueue.cpp  Probabilities.cpp  Probabilities.cu
src/: CMakeLists.txt  buffer.cu  map_test.cpp  nyu_classification  nyu_classification.cpp
src/BA/: Classifier.cpp  Classifier.hpp  ClassifierQueue.cpp  ClassifierQueue.hpp  Prediction.cpp  Prediction.hpp  Probabilities.cpp  Probabilities.hpp
